old/Version Beta/com_hdinsights_vnet_v0.1.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "complianceProfile": {
            "type": "string",
            "allowedValues": [
				"no-pci",
                "pci"
            ],
            "defaultValue": "no-pci",
            "metadata": {
                "description": "PCI or no-PCI"
            }
        },
        "environment": {
            "type": "string",
            "allowedValues": [
				"production",
                "preproduction",
                "development"
            ],
            "defaultValue": "development",
            "metadata": {
                "description": "Define environment to deploy in"
            }
        },
        "DNS1ServerAddress": {
            "type": "string",
            "defaultValue": "10.25.0.4",
            "metadata": {
                "description": "Domain Name Server 1"
            }
        },
        "DNS2ServerAddress": {
            "type": "string",
            "defaultValue": "10.25.0.5",
            "metadata": {
                "description": "Domain Name Server 2"
            }
        },
        "SecurityHubVnetName": {
            "type": "string",
            "defaultValue": "comit-vnet1",
            "metadata": {
                "description": "Name of the Security Hub vNet"
            }
        },
        "ResourceGroupSecurityHub": {
            "type": "string",
            "allowedValues": [
                "comit-p-rg1",
                "comit-t-rg1"
            ],
            "defaultValue": "comit-t-rg1",
            "metadata": {
                "description": "Name of Security Hub Resource Group"
            }
        },
        "VNETName": {
            "type": "string",
            "defaultValue": "commp-vnet3",
            "metadata": {
                "description": "Name for the Virtual Network (vNet)"
            }
        },
        "AddressPrefix": {
            "type": "string",
            "allowedValues": [
                "10.25.1.64/27",
                "10.25.17.64/27",
                "10.25.25.64/27"
            ],
            "defaultValue": "10.25.25.64/27",
            "metadata": {
                "description": "CIDR block for the vNet and Subnet"
            }
        },
        "NameForNSGOfHDInsights": {
            "type": "string",
            "defaultValue": "commp-hdinsights-nsg",
            "metadata": {
                "description": "Network Security Group Name the Application Service Enviroment (ASE) Subnet"
            }
        },
        "VSTSSubnetName": {
            "type": "string",
            "defaultValue": "hdInsightsSubnet",
            "metadata": {
                "description": "Name for VSTS Hosted Agent"
            }
        }
    },
    "variables": {
        "peeringName":"[concat(resourceGroup().name,'-',parameters('VNETName'),'-',parameters('ResourceGroupSecurityHub'),'-',parameters('SecurityHubVnetName'))]",
        "ResourceIDOfSecurityHubVNET": "[resourceId(parameters('ResourceGroupSecurityHub'),'Microsoft.Network/virtualNetworks', parameters('SecurityHubVnetName'))]"
    },
    "resources": [
        {           
            "name": "[parameters('NameForNSGOfHDInsights')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-05-01-preview",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "security"
            },
            "properties": {
                "mode":"incremental",
                "securityRules": [    
                    {
                        "name": "allow-sshManagement-inbound",
                        "properties": {
                            "description": "SSH Management (TCP/22)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-inbound-intra",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 310,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-management1",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "168.61.49.99",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 311,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-management2",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "23.99.5.239",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 312,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-management3",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "168.61.48.131",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 313,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-management4",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "138.91.141.162",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 314,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-management5",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "52.166.243.90",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 315,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "allow-https-management6",
                        "properties": {
                            "description": "HTTPS (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "52.174.36.244",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 316,
                            "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "deny-all-inbound",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-dns",
                        "properties": {
                            "description": "DNS (*/53)",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },       
                    {
                        "name": "allow-https-outbound",
                        "properties": {
                            "description": "HTTPS Azure Sync and Web (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound"
                        }
                    },    
                    {
                        "name": "allow-azureSql",
                        "properties": {
                            "description": "Azure SQL Dependency (TCP/1433)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-azureSqlDynamicPort",
                        "properties": {
                            "description": "Azure SQL Dependency v12 (TCP/10000-11999)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "10000-11999",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 410,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "allow-azureSqlDynamicPort2",
                        "properties": {
                            "description": "Azure SQL Dependency v12 (TCP/14000-14999)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "14000-14999",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 420,
                            "direction": "Outbound"
                        }
                    }, 
                    {
                        "name": "deny-all-outbound",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }                               
                ]
            }
        },
        {
            "name": "[parameters('VNETName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2015-06-15",             
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NameForNSGOfHDInsights'))]"
            ],
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "properties": {
                "mode": "Incremental",
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('AddressPrefix')]"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": [
                        "[parameters('DNS1ServerAddress')]",
                        "[parameters('DNS2ServerAddress')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('VSTSSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('AddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NameForNSGOfHDInsights'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('VNETName'),'/',variables('peeringName'))]",
            "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
            "apiVersion": "2016-06-01",           
            "location": "[resourceGroup().location]",   
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('VNETName'))]"
            ],
            "properties": {
                "allowVirtualNetworkAccess": "true",
                "allowForwardedTraffic": "true",
                "allowGatewayTransit": "false",
                "useRemoteGateways": "false",
                "remoteVirtualNetwork": {
                    "id": "[variables('ResourceIDOfSecurityHubVNET')]"
                }
            }
        } 
    ]
}
