old/Version Beta/com_securityHub_vNet_v0_4.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "complianceProfile": {
            "type": "string",
            "allowedValues": [
				"no-pci",
                "pci"
            ],
            "defaultValue": "no-pci",
            "metadata": {
                "description": "PCI or no-PCI"
            }
        },
        "environment": {
            "type": "string",
            "allowedValues": [
				"production",
                "preproduction",
                "development"
            ],
            "defaultValue": "development",
            "metadata": {
                "description": "Define environment to deploy in"
            }
        },
        "DNS1ServerAddress": {
            "type": "string",
            "defaultValue": "168.63.129.16",
            "metadata": {
                "description": "Domain Name Server 1"
            }
        },
        "DNS2ServerAddress": {
            "type": "string",
            "defaultValue": "168.63.129.17",
            "metadata": {
                "description": "Domain Name Server 2"
            }
        },
        "VNETName": {
            "type": "string",
            "defaultValue": "comit-vnet1",
            "metadata": {
                "description": "Name for the Security-Hub Virtual Network (VNET)"
            }
        },
        "VNETAddressPrefix": {
            "type": "string",
            "defaultValue": "10.25.24.0/25",
            "metadata": {
                "description": "CIDR block for vNet, Security-Hub"
            }
        },
        "domainControllerSubnetName": {
            "type": "string",
            "defaultValue": "domainController",
            "metadata": {
                "description": "Name for the Domain Controller Subnet"
            }
        },
        "domainControllerSubnetAddressPrefix": {
            "type": "string",
            "defaultValue": "10.25.24.0/29",
            "metadata": {
                "description": "CIDR block for Domain Controller Subnet"
            }
        },
        "nameForNSGOfDomainController": {
            "type": "string",
            "defaultValue": "comit-domainController-nsg",
            "metadata": {
                "description": "Network Security Group Name for Domain Controller Subnet"
            }
        },
        "domainControllerManagementSubnetName": {
            "type": "string",
            "defaultValue": "domainControllerManagement",
            "metadata": {
                "description": "Name for the Domain Controller Management Subnet"
            }
        },
        "domainControllerManagementSubnetAddressPrefix": {
            "type": "string",
            "defaultValue": "10.25.24.8/29",
            "metadata": {
                "description": "CIDR block for Domain Controller Management Subnet"
            }
        },
        "nameForNSGOfDomainControllerManagement": {
            "type": "string",
            "defaultValue": "comit-domainControllerManagement-nsg",
            "metadata": {
                "description": "Network Security Group Name for Domain Controller Management Subnet"
            }
        },
        "caixaBankSubnet": {
            "type": "string",
            "defaultValue": "10.0.0.0/8",
            "metadata": {
                "description": "Caixa Bank subnet"
            }
        },
        "caixaManagementSubnet": {
            "type": "string",
            "defaultValue": "10.0.0.0/8",
            "metadata": {
                "description": "Caixa Bank Management subnet"
            }
        }                
    },
    "variables": {     
    },
    "resources": [     
        {
            "name": "[parameters('nameForNSGOfDomainController')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-05-01-preview",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "security"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-psh-inbound",
                        "properties": {
                            "description": "WinRM Management (TCP/5986)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },      
                    {
                        "name": "allow-rdp-inbound",
                        "properties": {
                            "description": "RDP Management (TCP/3389)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },       
                    {
                        "name": "allow-management-inbound",
                        "properties": {
                            "description": "Management (*/*)",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix":"[parameters('domainControllerManagementSubnetAddressPrefix')]",
                            "destinationAddressPrefix":  "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound"
                        }
                    },         
                    {
                        "name": "allow-dns",
                        "properties": {
                            "description": "DNS (UDP/53)",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix":"*",
                            "destinationAddressPrefix":  "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    },         
                    {
                            "name": "allow-https-inbound",
                            "properties": {
                                "description": "HTTPS Azure Sync (TCP/443)",
                                "protocol": "TCP",
                                "sourcePortRange": "*",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "INTERNET",
                                "destinationAddressPrefix": "*",
                                "access": "Allow",
                                "priority": 300,
                                "direction": "Inbound"
                            }
                        },    
                    {
                        "name": "deny-all-inbound",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-forwardCbkDNS",
                        "properties": {
                            "description": "DNS (UDP/53)",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix":"*",
                            "destinationAddressPrefix": "[parameters('caixaBankSubnet')]",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },    
                    {
                        "name": "allow-forwardDNS",
                        "properties": {
                            "description": "DNS (UDP/53)",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix":"VirtualNetwork",
                            "destinationAddressPrefix": "INTERNET",
                            "access": "Allow",
                            "priority": 210,
                            "direction": "Outbound"
                        }
                    },  
                    {
                        "name": "deny-all-outbound",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('nameForNSGOfDomainControllerManagement')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-05-01-preview",        
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "security"
            },
            "properties": {
                "securityRules": [  
                    {
                        "name": "allow-rdpFromCBX",
                        "properties": {
                            "description": "RDP Management (TCP/3389)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "[parameters('caixaManagementSubnet')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },         
                    {
                        "name": "allow-microsoftDS",
                        "properties": {
                            "description": "Microsoft Domain Services (TCP/137-139)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "137-139",
                            "sourceAddressPrefix": "[parameters('domainControllerSubnetAddressPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Inbound"
                        }
                    },    
                    {
                        "name": "deny-all-inbound",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-management-outbound",
                        "properties": {
                            "description": "Management (TCP/*)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix":"*",
                            "destinationAddressPrefix":  "[parameters('domainControllerManagementSubnetAddressPrefix')]",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Outbound"
                        }
                    },  
                    {
                        "name": "allow-https-outbound",
                        "properties": {
                            "description": "HTTPS Azure Sync and Web (TCP/443)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "INTERNET",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound"
                        }
                    },    
                    {
                        "name": "allow-http-outbound",
                        "properties": {
                            "description": "HTTP Azure Sync and Web (TCP/80)",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "INTERNET",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Outbound"
                        }
                    },  
                    {
                        "name": "deny-all-outbound",
                        "properties": {
                            "description": "Deny all traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('VNETName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('nameForNSGOfDomainController'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('nameForNSGOfDomainControllerManagement'))]"
            ],
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('VNETAddressPrefix')]"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": [
                        "[parameters('DNS1ServerAddress')]",
                        "[parameters('DNS2ServerAddress')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('domainControllerSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('domainControllerSubnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nameForNSGOfDomainController'))]"
                            }
                        }
                    },
                    {
                        "name": "[parameters('domainControllerManagementSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('domainControllerManagementSubnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nameForNSGOfDomainControllerManagement'))]"
                            }
                        }
                    }
                ]
            }
        }        
    ],
    "outputs": {
    }
}
